fix bug z-index

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,7 @@ header {
   top: 0;
   background-color: #FFF;
   box-shadow: 5px 5px 5px rgb(0 0 0 / 20%);
+  z-index: 100;
 }
 
 header .container {
